--- a/SAAiOS/TextEdition/TextEdition.storyboard
+++ b/SAAiOS/TextEdition/TextEdition.storyboard
@@ -7,7 +7,6 @@
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
-        <capability name="Stack View standard spacing" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -19,28 +18,140 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" spacingType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="dkY-R7-2XR">
-                                <rect key="frame" x="10" y="20" width="355" height="637"/>
-                            </stackView>
+                            <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="A9y-1y-g5a">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                <connections>
+                                    <segue destination="2Xm-Fx-EDf" kind="embed" id="r5G-KF-sNI"/>
+                                </connections>
+                            </containerView>
+                            <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="qZd-cU-bNl">
+                                <rect key="frame" x="517" y="-81" width="0.0" height="748"/>
+                                <connections>
+                                    <segue destination="2Xm-Fx-EDf" kind="embed" id="M9s-Ll-soL"/>
+                                </connections>
+                            </containerView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="VUw-jc-0yf" firstAttribute="top" secondItem="dkY-R7-2XR" secondAttribute="top" id="1B0-r5-SqQ"/>
-                            <constraint firstItem="dkY-R7-2XR" firstAttribute="leading" secondItem="VUw-jc-0yf" secondAttribute="leading" constant="10" id="A0A-YO-pDS"/>
-                            <constraint firstItem="VUw-jc-0yf" firstAttribute="bottom" secondItem="dkY-R7-2XR" secondAttribute="bottom" constant="10" id="BgK-T2-RhS"/>
-                            <constraint firstItem="VUw-jc-0yf" firstAttribute="trailing" secondItem="dkY-R7-2XR" secondAttribute="trailing" constant="10" id="EfQ-nP-UMC"/>
+                            <constraint firstItem="qZd-cU-bNl" firstAttribute="bottom" secondItem="VUw-jc-0yf" secondAttribute="bottom" id="5Wj-Bt-OtS"/>
+                            <constraint firstAttribute="bottom" secondItem="A9y-1y-g5a" secondAttribute="bottom" id="6n3-ZV-xAs"/>
+                            <constraint firstItem="qZd-cU-bNl" firstAttribute="leading" secondItem="A9y-1y-g5a" secondAttribute="trailing" constant="10" id="Efo-eb-NB6"/>
+                            <constraint firstItem="qZd-cU-bNl" firstAttribute="top" secondItem="VUw-jc-0yf" secondAttribute="top" id="Eki-XP-3uC"/>
+                            <constraint firstItem="VUw-jc-0yf" firstAttribute="trailing" secondItem="qZd-cU-bNl" secondAttribute="trailing" id="Kxv-Mk-4pE"/>
+                            <constraint firstItem="A9y-1y-g5a" firstAttribute="top" secondItem="svH-Pt-448" secondAttribute="top" id="Lkf-Lu-cFD"/>
+                            <constraint firstItem="A9y-1y-g5a" firstAttribute="bottom" secondItem="VUw-jc-0yf" secondAttribute="bottom" id="WOA-VC-M5b"/>
+                            <constraint firstItem="A9y-1y-g5a" firstAttribute="leading" secondItem="VUw-jc-0yf" secondAttribute="leading" id="e8f-NW-tNd"/>
+                            <constraint firstItem="qZd-cU-bNl" firstAttribute="width" secondItem="A9y-1y-g5a" secondAttribute="width" id="gIS-Gz-ZaE"/>
+                            <constraint firstItem="VUw-jc-0yf" firstAttribute="trailing" secondItem="A9y-1y-g5a" secondAttribute="trailing" id="pC6-yy-qRm"/>
+                            <constraint firstItem="A9y-1y-g5a" firstAttribute="leading" secondItem="VUw-jc-0yf" secondAttribute="leading" id="qUO-NL-DhN"/>
+                            <constraint firstItem="A9y-1y-g5a" firstAttribute="top" secondItem="VUw-jc-0yf" secondAttribute="top" id="rBg-Sf-IPD"/>
+                            <constraint firstItem="qZd-cU-bNl" firstAttribute="leading" secondItem="A9y-1y-g5a" secondAttribute="trailing" constant="10" id="xSY-de-yjB"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="VUw-jc-0yf"/>
+                        <variation key="default">
+                            <mask key="subviews">
+                                <exclude reference="qZd-cU-bNl"/>
+                            </mask>
+                            <mask key="constraints">
+                                <exclude reference="5Wj-Bt-OtS"/>
+                                <exclude reference="Efo-eb-NB6"/>
+                                <exclude reference="Eki-XP-3uC"/>
+                                <exclude reference="gIS-Gz-ZaE"/>
+                                <exclude reference="xSY-de-yjB"/>
+                                <exclude reference="Kxv-Mk-4pE"/>
+                                <exclude reference="pC6-yy-qRm"/>
+                                <exclude reference="6n3-ZV-xAs"/>
+                                <exclude reference="Lkf-Lu-cFD"/>
+                                <exclude reference="WOA-VC-M5b"/>
+                                <exclude reference="e8f-NW-tNd"/>
+                                <exclude reference="qUO-NL-DhN"/>
+                                <exclude reference="rBg-Sf-IPD"/>
+                            </mask>
+                        </variation>
+                        <variation key="widthClass=compact">
+                            <mask key="constraints">
+                                <include reference="pC6-yy-qRm"/>
+                                <include reference="6n3-ZV-xAs"/>
+                                <include reference="Lkf-Lu-cFD"/>
+                                <include reference="qUO-NL-DhN"/>
+                            </mask>
+                        </variation>
+                        <variation key="widthClass=regular">
+                            <mask key="subviews">
+                                <include reference="qZd-cU-bNl"/>
+                            </mask>
+                            <mask key="constraints">
+                                <include reference="5Wj-Bt-OtS"/>
+                                <include reference="Efo-eb-NB6"/>
+                                <include reference="Eki-XP-3uC"/>
+                                <include reference="gIS-Gz-ZaE"/>
+                                <include reference="xSY-de-yjB"/>
+                                <include reference="Kxv-Mk-4pE"/>
+                                <include reference="WOA-VC-M5b"/>
+                                <include reference="e8f-NW-tNd"/>
+                                <include reference="rBg-Sf-IPD"/>
+                            </mask>
+                        </variation>
                     </view>
                     <toolbarItems/>
                     <navigationItem key="navigationItem" title="Detail" id="mOI-FS-AaM"/>
                     <connections>
-                        <outlet property="stackView" destination="dkY-R7-2XR" id="0JX-Cs-q4E"/>
+                        <outlet property="primaryContainerView" destination="A9y-1y-g5a" id="sKg-xO-zJR"/>
+                        <outlet property="secondaryContainerView" destination="qZd-cU-bNl" id="8YH-Xp-Wpn"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="FJe-Yq-33r" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="708" y="128.18590704647679"/>
+            <point key="canvasLocation" x="704.8828125" y="50"/>
+        </scene>
+        <!--Text Panel View Controller-->
+        <scene sceneID="RfG-W3-FOO">
+            <objects>
+                <viewController storyboardIdentifier="TextPanelViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="2Xm-Fx-EDf" customClass="TextPanelViewController" customModule="SAAiOS" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="fpk-cV-miu">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="gCf-wZ-KKp">
+                                <rect key="frame" x="10" y="30" width="355" height="589"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="5e5-qn-tx9">
+                                <rect key="frame" x="10" y="629" width="355" height="29"/>
+                                <segments>
+                                    <segment title="Cuneiform"/>
+                                    <segment title="Transliteration"/>
+                                    <segment title="Normalisation"/>
+                                    <segment title="Translation"/>
+                                </segments>
+                                <connections>
+                                    <action selector="changeText:" destination="2Xm-Fx-EDf" eventType="valueChanged" id="6S9-2R-OOj"/>
+                                </connections>
+                            </segmentedControl>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="5e5-qn-tx9" firstAttribute="leading" secondItem="D4c-D3-hS8" secondAttribute="leading" constant="10" id="5Nc-p3-q10"/>
+                            <constraint firstItem="gCf-wZ-KKp" firstAttribute="leading" secondItem="D4c-D3-hS8" secondAttribute="leading" constant="10" id="B15-qN-jmj"/>
+                            <constraint firstItem="D4c-D3-hS8" firstAttribute="trailing" secondItem="gCf-wZ-KKp" secondAttribute="trailing" constant="10" id="DZn-8D-d53"/>
+                            <constraint firstItem="gCf-wZ-KKp" firstAttribute="top" secondItem="D4c-D3-hS8" secondAttribute="top" constant="10" id="OHl-wW-K2q"/>
+                            <constraint firstItem="D4c-D3-hS8" firstAttribute="bottom" secondItem="5e5-qn-tx9" secondAttribute="bottom" constant="10" id="SE0-XG-9CF"/>
+                            <constraint firstItem="D4c-D3-hS8" firstAttribute="trailing" secondItem="5e5-qn-tx9" secondAttribute="trailing" constant="10" id="UyK-Cz-qgg"/>
+                            <constraint firstItem="5e5-qn-tx9" firstAttribute="top" secondItem="gCf-wZ-KKp" secondAttribute="bottom" constant="10" id="rXJ-4o-y0G"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="D4c-D3-hS8"/>
+                    </view>
+                    <connections>
+                        <outlet property="segmentedControl" destination="5e5-qn-tx9" id="ich-yN-gK2"/>
+                        <outlet property="textView" destination="gCf-wZ-KKp" id="xgl-Cp-bnl"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="0aD-4B-KZo" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="705" y="810"/>
         </scene>
         <!--Info Table View Controller-->
         <scene sceneID="JuN-pJ-dhO">
@@ -106,4 +217,7 @@
             <point key="canvasLocation" x="1621" y="133"/>
         </scene>
     </scenes>
+    <inferredMetricsTieBreakers>
+        <segue reference="r5G-KF-sNI"/>
+    </inferredMetricsTieBreakers>
 </document>
